Further simplify tests